fix: made navbar on mobile transparent

--- a/src/components/styles/_navbar.scss
+++ b/src/components/styles/_navbar.scss
@@ -65,23 +65,25 @@
 
 .navbar {
   position: fixed;
-  top: 40px;
+  top: 41px;
   right: 0;
-  width: 100%;
+  width: 80vw;
   visibility: hidden;
   z-index: 10;
-
-  border-top: 1px $dream-blue solid;
 
   &.open {
     visibility: visible;
   }
 
   &__menu {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: $dream-white;
+    background-color: rgba(255, 255, 255, 0.6);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    backdrop-filter: blur(4px);
     text-transform: uppercase;
     padding: 2rem 0;
     transform: translateX(200%);
@@ -132,8 +134,11 @@
 
     &__menu {
       flex-direction: row;
+      height: 100%;
       width: 100%;
       background-color: transparent;
+      box-shadow: none;
+      backdrop-filter: none;
       text-transform: none;
       padding: 0;
       transform: translateX(0);
