--- a/src/components/styles/componentStyles.css
+++ b/src/components/styles/componentStyles.css
@@ -64,21 +64,25 @@ body {
 
 .navbar {
   position: fixed;
-  top: 40px;
+  top: 41px;
   right: 0;
-  width: 100%;
+  width: 80vw;
   visibility: hidden;
   z-index: 10;
-  border-top: 1px #b9dee2 solid;
 }
 .navbar.open {
   visibility: visible;
 }
 .navbar__menu {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f6f8f9;
+  background-color: rgba(255, 255, 255, 0.6);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
   text-transform: uppercase;
   padding: 2rem 0;
   transform: translateX(200%);
@@ -119,8 +123,12 @@ body {
   }
   .navbar__menu {
     flex-direction: row;
+    height: 100%;
     width: 100%;
     background-color: transparent;
+    box-shadow: none;
+    -webkit-backdrop-filter: none;
+            backdrop-filter: none;
     text-transform: none;
     padding: 0;
     transform: translateX(0);
